--- a/resources/BostonMetroMap.fxml
+++ b/resources/BostonMetroMap.fxml
@@ -631,12 +631,12 @@
                   <Font size="3.0" />
                </font>
             </Button>
-            <Button fx:id="a36" layoutX="223.0" layoutY="247.0" mnemonicParsing="false" onAction="#getName" prefHeight="10.0" prefWidth="10.0" style="-fx-background-radius: 10; -fx-background-color: #8AC800;">
+            <Button fx:id="a36" layoutX="223.0" layoutY="247.0" mnemonicParsing="false" onAction="#getName" prefHeight="10.0" prefWidth="10.0" style="-fx-background-radius: 10;">
                <font>
                   <Font size="3.0" />
                </font>
             </Button>
-            <Button fx:id="a40" layoutX="213.0" layoutY="238.0" mnemonicParsing="false" onAction="#getName" prefHeight="10.0" prefWidth="10.0" style="-fx-background-radius: 10; -fx-background-color: #8AC800;">
+            <Button fx:id="a40" layoutX="213.0" layoutY="238.0" mnemonicParsing="false" onAction="#getName" prefHeight="10.0" prefWidth="10.0" style="-fx-background-radius: 10;">
                <font>
                   <Font size="3.0" />
                </font>
