--- a/resources/BostonMetroMap.fxml
+++ b/resources/BostonMetroMap.fxml
@@ -12,7 +12,7 @@
     <Group layoutX="0" layoutY="0">
     <ImageView fx:id="mapImage" fitHeight="820.0" fitWidth="1189.0" pickOnBounds="true" preserveRatio="true">
         <image>
-            <Image url="@Images/mapFinal.png" />
+            <Image url="@Images/metroMap.png" />
         </image>
     </ImageView>
             <Button fx:id="a69" layoutX="81.0" layoutY="331.0" mnemonicParsing="false" onAction="#getName" prefHeight="10.0" prefWidth="10.0" style="-fx-background-radius: 10;">
